# product-pack

./: .copier-answers.yml  .eslintrc.yml  .flake8  .isort.cfg  .pre-commit-config.yaml  .prettierrc.yml  .pylintrc  .travis.yml  LICENSE  README.md  migration14-15-pre.sh  test-requirements.txt
pos_product_pack/: README.rst  __manifest__.py
pos_product_pack/i18n/: pos_product_pack.pot
pos_product_pack/models/: pos_order_line.py
pos_product_pack/readme/: DESCRIPTION.rst  ROADMAP.rst  USAGE.rst
pos_product_pack/views/: pos_product_pack.xml
product_pack/: README.rst  __manifest__.py
product_pack/demo/: product_pack_line_demo.xml  product_product_demo.xml
product_pack/i18n/: ca.po  de.po  es.po  es_AR.po  fr.po  it.po  (+4 more)
product_pack_category_restriction/: README.rst  __manifest__.py
product_pack_type/: README.rst  __manifest__.py
purchase_product_pack/: README.rst  __init__.py  __manifest__.py
sale_management_product_pack/: README.rst  __manifest__.py
sale_order_line_packaging_qty/: __manifest__.py
sale_product_pack/: README.rst  __manifest__.py
sale_product_pack_assisted/: README.rst  __manifest__.py
sale_product_pack_contract/: README.rst  __manifest__.py
sale_product_pack_fixed_discount/: README.rst  __manifest__.py
sale_product_pack_line_modification/: README.rst  __manifest__.py
sale_stock_product_pack/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml  setup.py
stock_product_pack/: README.rst  __manifest__.py
website_sale_coupon_product_pack/: __manifest__.py
website_sale_product_pack/: README.rst  __manifest__.py
(+222 files in other folders)
