[project]
name = "odoo-addons-oca-product-pack"
version = "17.0.20241008.0"
dependencies = [
    "odoo-addon-product_pack>=17.0dev,<17.1dev",
    "odoo-addon-sale_product_pack>=17.0dev,<17.1dev",
    "odoo-addon-website_sale_product_pack>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
